# opencv_zoo

./: .gitattributes  .gitignore  README.md
benchmark/: README.md  benchmark.py  detection_metric.py  download.py  download_data.py  generate_table.py  requirements.txt  table_config.yaml
benchmark/cal_rescall/: rrc_evaluation_funcs.py  script.py
benchmark/config/: face_detection_yunet.yaml  face_recognition_sface.yaml  facial_expression_recognition.yaml  handpose_estimation_mediapipe.yaml  human_segmentation_pphumanseg.yaml  image_classification_mobilenet.yaml  image_classification_mobilenetv1.yaml  image_classification_mobilenetv2.yaml  image_classification_ppresnet.yaml  license_plate_detection_yunet.yaml  object_detection_nanodet.yaml  object_detection_yolox.yaml  object_tracking_dasiamrpn.yaml  object_tracking_vittrack.yaml  optical_flow_estimation_raft.yaml  palm_detection_mediapipe.yaml  person_detection_mediapipe.yaml  person_reid_youtureid.yaml  pose_estimation_mediapipe.yaml  qrcode_wechatqrcode.yaml  text_detection_db.yaml  text_detection_db_metrics.yaml  text_detection_ppdetect.yaml  text_detection_ppocr.yaml  text_recognition_crnn.yaml  text_recognition_crnn_cn.yaml  text_recognition_crnn_en.yaml
benchmark/utils/: __init__.py  factory.py  timer.py
models/: __init__.py  pom.xml
models/deblurring_nafnet/: CMakeLists.txt  README.md  deblurring_nafnet_2025may.onnx  demo.cpp  demo.py  nafnet.py
models/dehaze_MAXIM/: README.md  dehaze_maxim_2022aug.onnx  dehazed_maxim.tflite  demo.py  maxim.py
models/dehaze_maxim/: README.md  calculate_psnr.py  demo.py  maxim.py
models/edge_detection_dexined/: CMakeLists.txt  README.md  demo.cpp  demo.py  dexined.py  edge_detection.cpp  edge_detection.py  edge_detection_dexined_2024sep.onnx
models/face_detection_yunet/: CMakeLists.txt  README.md  demo.cpp  demo.py  face_detection_yunet_2021dec-act_int8-wt_int8-quantized.onnx  face_detection_yunet_2021dec.onnx  face_detection_yunet_2021sep.onnx  face_detection_yunet_2022mar.onnx  face_detection_yunet_2022mar_int8.onnx  face_detection_yunet_2023mar.onnx  face_detection_yunet_2023mar_int8.onnx  face_detection_yunet_2023mar_int8bq.onnx  yunet.py
models/face_image_quality_assessment_ediffiqa/: README.md  demo.py  ediffiqa.py  ediffiqa_tiny_jun2024.onnx
models/face_recognition_sface/: CMakeLists.txt  README.md  demo.cpp  demo.java  demo.py  face_recognition_sface_2021dec.onnx  face_recognition_sface_2021dec_int8.onnx  face_recognition_sface_2021dec_int8bq.onnx  face_recognition_sface_2021sep.onnx  sface.py
models/facial_expression_recognition/: CMakeLists.txt  README.md  demo.cpp  demo.py  facial_expression_recognition_mobilefacenet_2022july-int8-quantized.onnx  facial_expression_recognition_mobilefacenet_2022july.onnx  facial_expression_recognition_mobilefacenet_2022july_fp16.onnx  facial_expression_recognition_mobilefacenet_2022july_int8.onnx  facial_expression_recognition_mobilefacenet_2022july_int8bq.onnx  facial_fer_model.py
models/handpose_detection_mediapipe/: demo.py  handpose_detection_mphandpose_2022may.onnx  mp_handpose.py  test.py
models/handpose_estimation_mediapipe/: README.md  demo.py  handpose_estimation_mediapipe_2022may-int8-quantized.onnx  handpose_estimation_mediapipe_2023feb-act_int8-wt_int8-quantized.onnx  handpose_estimation_mediapipe_2023feb.onnx  handpose_estimation_mediapipe_2023feb_blocked.onnx  handpose_estimation_mediapipe_2023feb_fp16.onnx  handpose_estimation_mediapipe_2023feb_int8.onnx  mp_handpose.py
models/handpose_mediapipe/: README.md  (+3 more)
models/image_classification_mobilenet/: CMakeLists.txt  README.md  demo.cpp  demo.py  image_classification_mobilenetv1_2022apr-act_int8-wt_int8-quantized.onnx  image_classification_mobilenetv1_2022apr.onnx  image_classification_mobilenetv1_2022apr_blocked.onnx  image_classification_mobilenetv1_2022apr_int8.onnx  image_classification_mobilenetv2_2022apr-act_int8-wt_int8-quantized.onnx  image_classification_mobilenetv2_2022apr.onnx  image_classification_mobilenetv2_2022apr_int8.onnx  image_classification_mobilenetv2_2022apr_int8bq.onnx  labelsimagenet1k.h  mobilenet.cpp  mobilenet.py  mobilenet_v1.py  mobilenet_v2.py
models/inpainting_lama/: CMakeLists.txt  LICENSE  README.md  demo.cpp  demo.py  inpainting_lama_2025jan.onnx  lama.py
models/person_reid_youtureid/: CMakeLists.txt  README.md  demo.cpp  demo.py  person_reid_youtu_2021nov.onnx  person_reid_youtu_2021nov_int8.onnx  person_reid_youtu_2021nov_int8bq.onnx  youtureid.py
multitask_centernet/: README.md  demo.py  demo_new.py  demo_onnx.py
reports/: README.md
(+252 files in other folders)
